Scheduled job initializer and job scheduler interface

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -373,6 +373,7 @@
     <Compile Include="Polling\PollingServicesRegistry_spec.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ScheduledJob\ScheduledJobInitializerTester.cs" />
     <Compile Include="ScheduledJob\ScheduledJobLoggerTester.cs" />
     <Compile Include="ScheduledJob\ScheduledJobRunnerTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
