--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -268,16 +268,17 @@
     <Compile Include="Sagas\SagaTypes.cs" />
     <Compile Include="Sagas\StatefulSagaConvention.cs" />
     <Compile Include="Sagas\StatefulSagaNode.cs" />
-    <Compile Include="ScheduledJob\EveryDayAtSpecificTime.cs" />
-    <Compile Include="ScheduledJob\IScheduleRule.cs" />
-    <Compile Include="ScheduledJob\IScheduledJobLogger.cs" />
-    <Compile Include="ScheduledJob\ScheduledJobExpression.cs" />
-    <Compile Include="ScheduledJob\ScheduledJobHandlerCall.cs" />
-    <Compile Include="ScheduledJob\ScheduledJobLogger.cs" />
-    <Compile Include="ScheduledJob\ScheduledJobLogRecords.cs" />
-    <Compile Include="ScheduledJob\ScheduledJobRunner.cs" />
-    <Compile Include="ScheduledJob\ScheduledJobServicesRegistry.cs" />
-    <Compile Include="ScheduledJob\ScheduledJobGraph.cs" />
+    <Compile Include="ScheduledJobs\EveryDayAtSpecificTime.cs" />
+    <Compile Include="ScheduledJobs\IScheduleRule.cs" />
+    <Compile Include="ScheduledJobs\IScheduledJobLogger.cs" />
+    <Compile Include="ScheduledJobs\ScheduledJob.cs" />
+    <Compile Include="ScheduledJobs\ScheduledJobExpression.cs" />
+    <Compile Include="ScheduledJobs\ScheduledJobHandlerCall.cs" />
+    <Compile Include="ScheduledJobs\ScheduledJobLogger.cs" />
+    <Compile Include="ScheduledJobs\ScheduledJobLogRecords.cs" />
+    <Compile Include="ScheduledJobs\ScheduledJobRunner.cs" />
+    <Compile Include="ScheduledJobs\ScheduledJobServicesRegistry.cs" />
+    <Compile Include="ScheduledJobs\ScheduledJobGraphClasses.cs" />
     <Compile Include="Scheduling\IScheduler.cs" />
     <Compile Include="Scheduling\TaskScheduler.cs" />
     <Compile Include="Scheduling\ThreadScheduler.cs" />
