--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -271,14 +271,13 @@
     <Compile Include="ScheduledJob\EveryDayAtSpecificTime.cs" />
     <Compile Include="ScheduledJob\IScheduleRule.cs" />
     <Compile Include="ScheduledJob\IScheduledJobLogger.cs" />
-    <Compile Include="ScheduledJob\ScheduledJobDefinition.cs" />
     <Compile Include="ScheduledJob\ScheduledJobExpression.cs" />
-    <Compile Include="ScheduledJob\ScheduledJobHandlerSource.cs" />
+    <Compile Include="ScheduledJob\ScheduledJobHandlerCall.cs" />
     <Compile Include="ScheduledJob\ScheduledJobLogger.cs" />
     <Compile Include="ScheduledJob\ScheduledJobLogRecords.cs" />
     <Compile Include="ScheduledJob\ScheduledJobRunner.cs" />
     <Compile Include="ScheduledJob\ScheduledJobServicesRegistry.cs" />
-    <Compile Include="ScheduledJob\ScheduledJobSettings.cs" />
+    <Compile Include="ScheduledJob\ScheduledJobGraph.cs" />
     <Compile Include="Scheduling\IScheduler.cs" />
     <Compile Include="Scheduling\TaskScheduler.cs" />
     <Compile Include="Scheduling\ThreadScheduler.cs" />
