--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -271,6 +271,7 @@
     <Compile Include="ScheduledJobs\EveryDayAtSpecificTime.cs" />
     <Compile Include="ScheduledJobs\IScheduleRule.cs" />
     <Compile Include="ScheduledJobs\IScheduledJobLogger.cs" />
+    <Compile Include="ScheduledJobs\JobSchedule.cs" />
     <Compile Include="ScheduledJobs\ScheduledJob.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobExpression.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobHandlerCall.cs" />
