--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -272,6 +272,8 @@
     <Compile Include="ScheduledJobs\IScheduleRule.cs" />
     <Compile Include="ScheduledJobs\IScheduledJobLogger.cs" />
     <Compile Include="ScheduledJobs\JobSchedule.cs" />
+    <Compile Include="ScheduledJobs\JobStatus.cs" />
+    <Compile Include="ScheduledJobs\JobStatusExtensions.cs" />
     <Compile Include="ScheduledJobs\ScheduledJob.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobExpression.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobHandlerCall.cs" />
