Scheduled job registration, bootstrapping, and start of integration test

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -375,6 +375,7 @@
     </Compile>
     <Compile Include="ScheduledJob\EveryDayAtSpecificTimeJobSchedulerTester.cs" />
     <Compile Include="ScheduledJob\ScheduledJobInitializerTester.cs" />
+    <Compile Include="ScheduledJob\ScheduledJobIntegrationTester.cs" />
     <Compile Include="ScheduledJob\ScheduledJobLoggerTester.cs" />
     <Compile Include="ScheduledJob\ScheduledJobRunnerTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
