--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -271,10 +271,16 @@
     <Compile Include="ScheduledJob\EveryDayAtSpecificTime.cs" />
     <Compile Include="ScheduledJob\IJobScheduler.cs" />
     <Compile Include="ScheduledJob\IScheduledJobLogger.cs" />
+    <Compile Include="ScheduledJob\RegisterScheduledJobs.cs" />
+    <Compile Include="ScheduledJob\ScheduledJobDefinition.cs" />
+    <Compile Include="ScheduledJob\ScheduledJobExpression.cs" />
+    <Compile Include="ScheduledJob\ScheduledJobHandlerSource.cs" />
     <Compile Include="ScheduledJob\ScheduledJobInitializer.cs" />
     <Compile Include="ScheduledJob\ScheduledJobLogger.cs" />
     <Compile Include="ScheduledJob\ScheduledJobLogRecords.cs" />
     <Compile Include="ScheduledJob\ScheduledJobRunner.cs" />
+    <Compile Include="ScheduledJob\ScheduledJobServicesRegistry.cs" />
+    <Compile Include="ScheduledJob\ScheduledJobSettings.cs" />
     <Compile Include="Scheduling\IScheduler.cs" />
     <Compile Include="Scheduling\TaskScheduler.cs" />
     <Compile Include="Scheduling\ThreadScheduler.cs" />
