--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -375,6 +375,7 @@
     </Compile>
     <Compile Include="ScheduledJobs\EveryDayAtSpecificTimeJobSchedulerTester.cs" />
     <Compile Include="ScheduledJobs\JobScheduleTester.cs" />
+    <Compile Include="ScheduledJobs\ScheduledJobGraphTester.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobIntegrationTester.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobLoggerTester.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobRunnerTester.cs" />
