--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -268,6 +268,7 @@
     <Compile Include="Sagas\SagaTypes.cs" />
     <Compile Include="Sagas\StatefulSagaConvention.cs" />
     <Compile Include="Sagas\StatefulSagaNode.cs" />
+    <Compile Include="ScheduledJobs\ApplyScheduledJobRouting.cs" />
     <Compile Include="ScheduledJobs\EveryDayAtSpecificTime.cs" />
     <Compile Include="ScheduledJobs\IScheduleRule.cs" />
     <Compile Include="ScheduledJobs\IScheduledJobLogger.cs" />
@@ -277,6 +278,7 @@
     <Compile Include="ScheduledJobs\ScheduledJob.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobExpression.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobHandlerCall.cs" />
+    <Compile Include="ScheduledJobs\ScheduledJobHandlerSource.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobLogger.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobLogRecords.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobRunner.cs" />
