cleanup before going on w/ schedule timing

--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -272,18 +272,21 @@
     <Compile Include="ScheduledJobs\EveryDayAtSpecificTime.cs" />
     <Compile Include="ScheduledJobs\IScheduleRule.cs" />
     <Compile Include="ScheduledJobs\IScheduledJobLogger.cs" />
+    <Compile Include="ScheduledJobs\JobExecutionRecord.cs" />
     <Compile Include="ScheduledJobs\JobSchedule.cs" />
     <Compile Include="ScheduledJobs\JobStatus.cs" />
     <Compile Include="ScheduledJobs\JobStatusExtensions.cs" />
     <Compile Include="ScheduledJobs\ScheduledJob.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobExpression.cs" />
+    <Compile Include="ScheduledJobs\ScheduledJobGraph.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobHandlerCall.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobHandlerSource.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobLogger.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobLogRecords.cs" />
+    <Compile Include="ScheduledJobs\ScheduledJobRoutingRule.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobRunner.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobServicesRegistry.cs" />
-    <Compile Include="ScheduledJobs\ScheduledJobGraphClasses.cs" />
+    <Compile Include="ScheduledJobs\ScheduleClasses.cs" />
     <Compile Include="Scheduling\IScheduler.cs" />
     <Compile Include="Scheduling\TaskScheduler.cs" />
     <Compile Include="Scheduling\ThreadScheduler.cs" />
