--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -272,15 +272,17 @@
     <Compile Include="ScheduledJobs\EveryDayAtSpecificTime.cs" />
     <Compile Include="ScheduledJobs\InMemorySchedulePersistence.cs" />
     <Compile Include="ScheduledJobs\ISchedulePersistence.cs" />
+    <Compile Include="ScheduledJobs\IScheduleRepository.cs" />
     <Compile Include="ScheduledJobs\IScheduleRule.cs" />
     <Compile Include="ScheduledJobs\IScheduledJobLogger.cs" />
     <Compile Include="ScheduledJobs\JobExecutionRecord.cs" />
     <Compile Include="ScheduledJobs\JobKeyAttribute.cs" />
     <Compile Include="ScheduledJobs\JobSchedule.cs" />
     <Compile Include="ScheduledJobs\JobStatus.cs" />
+    <Compile Include="ScheduledJobs\JobStatusDTO.cs" />
     <Compile Include="ScheduledJobs\JobStatusExtensions.cs" />
     <Compile Include="ScheduledJobs\JobTimer.cs" />
-    <Compile Include="ScheduledJobs\PersistenceClasses.cs" />
+    <Compile Include="ScheduledJobs\ScheduleRepository.cs" />
     <Compile Include="ScheduledJobs\ScheduledJob.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobExpression.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobGraph.cs" />
