--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -270,6 +270,7 @@
     <Compile Include="Sagas\StatefulSagaNode.cs" />
     <Compile Include="ScheduledJobs\ApplyScheduledJobRouting.cs" />
     <Compile Include="ScheduledJobs\EveryDayAtSpecificTime.cs" />
+    <Compile Include="ScheduledJobs\IJobExecutor.cs" />
     <Compile Include="ScheduledJobs\InMemorySchedulePersistence.cs" />
     <Compile Include="ScheduledJobs\IScheduledJob.cs" />
     <Compile Include="ScheduledJobs\ISchedulePersistence.cs" />
@@ -294,7 +295,7 @@
     <Compile Include="ScheduledJobs\ScheduledJobRoutingRule.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobRunner.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobServicesRegistry.cs" />
-    <Compile Include="ScheduledJobs\SPIKE.cs" />
+    <Compile Include="ScheduledJobs\ScheduledJobController.cs" />
     <Compile Include="Scheduling\IScheduler.cs" />
     <Compile Include="Scheduling\TaskScheduler.cs" />
     <Compile Include="Scheduling\ThreadScheduler.cs" />
