--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -378,6 +378,7 @@
     <Compile Include="ScheduledJobs\JobScheduleTester.cs" />
     <Compile Include="ScheduledJobs\JobStatusTester.cs" />
     <Compile Include="ScheduledJobs\JobTimerIntegratedTester.cs" />
+    <Compile Include="ScheduledJobs\ScheduledJobController_integration_Tester.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobGraphTester.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobIntegrationTester.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobLoggerTester.cs" />
