Ability to register polling jobs to run immediately and not wait for interveal

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -367,6 +367,7 @@
     <Compile Include="Polling\PollingJobIntegrationTester.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Polling\PollingJobRunImmediatelyIntegrationTester.cs" />
     <Compile Include="Polling\PollingJobTester.cs">
       <SubType>Code</SubType>
     </Compile>
