--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -287,6 +287,7 @@
     <Compile Include="ScheduledJobs\JobStatusDTO.cs" />
     <Compile Include="ScheduledJobs\JobStatusExtensions.cs" />
     <Compile Include="ScheduledJobs\JobTimer.cs" />
+    <Compile Include="ScheduledJobs\RegisterScheduledJobs.cs" />
     <Compile Include="ScheduledJobs\ScheduleRepository.cs" />
     <Compile Include="ScheduledJobs\ScheduledJob.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobExpression.cs" />
