reorganized the scheduled job namespace

--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -269,36 +269,36 @@
     <Compile Include="Sagas\SagaTypes.cs" />
     <Compile Include="Sagas\StatefulSagaConvention.cs" />
     <Compile Include="Sagas\StatefulSagaNode.cs" />
-    <Compile Include="ScheduledJobs\ApplyScheduledJobRouting.cs" />
-    <Compile Include="ScheduledJobs\EveryDayAtSpecificTime.cs" />
-    <Compile Include="ScheduledJobs\ExecuteScheduledJob.cs" />
-    <Compile Include="ScheduledJobs\IJobExecutor.cs" />
-    <Compile Include="ScheduledJobs\InMemorySchedulePersistence.cs" />
+    <Compile Include="ScheduledJobs\Configuration\ApplyScheduledJobRouting.cs" />
+    <Compile Include="ScheduledJobs\Execution\EveryDayAtSpecificTime.cs" />
+    <Compile Include="ScheduledJobs\Execution\ExecuteScheduledJob.cs" />
+    <Compile Include="ScheduledJobs\Execution\IJobExecutor.cs" />
+    <Compile Include="ScheduledJobs\Persistence\InMemorySchedulePersistence.cs" />
     <Compile Include="ScheduledJobs\IScheduledJob.cs" />
-    <Compile Include="ScheduledJobs\ISchedulePersistence.cs" />
-    <Compile Include="ScheduledJobs\IScheduleStatusMonitor.cs" />
-    <Compile Include="ScheduledJobs\IScheduleRule.cs" />
-    <Compile Include="ScheduledJobs\JobExecutionRecord.cs" />
-    <Compile Include="ScheduledJobs\JobExecutionStatus.cs" />
+    <Compile Include="ScheduledJobs\Persistence\ISchedulePersistence.cs" />
+    <Compile Include="ScheduledJobs\Persistence\IScheduleStatusMonitor.cs" />
+    <Compile Include="ScheduledJobs\Execution\IScheduleRule.cs" />
+    <Compile Include="ScheduledJobs\Persistence\JobExecutionRecord.cs" />
+    <Compile Include="ScheduledJobs\Persistence\JobExecutionStatus.cs" />
     <Compile Include="ScheduledJobs\JobKeyAttribute.cs" />
-    <Compile Include="ScheduledJobs\JobSchedule.cs" />
-    <Compile Include="ScheduledJobs\JobStatus.cs" />
-    <Compile Include="ScheduledJobs\JobStatusDTO.cs" />
-    <Compile Include="ScheduledJobs\JobStatusExtensions.cs" />
-    <Compile Include="ScheduledJobs\JobTimer.cs" />
-    <Compile Include="ScheduledJobs\RegisterScheduledJobs.cs" />
+    <Compile Include="ScheduledJobs\Persistence\JobSchedule.cs" />
+    <Compile Include="ScheduledJobs\Persistence\JobStatus.cs" />
+    <Compile Include="ScheduledJobs\Persistence\JobStatusDTO.cs" />
+    <Compile Include="ScheduledJobs\Persistence\JobStatusExtensions.cs" />
+    <Compile Include="ScheduledJobs\Execution\JobTimer.cs" />
+    <Compile Include="ScheduledJobs\Configuration\RegisterScheduledJobs.cs" />
     <Compile Include="ScheduledJobs\RescheduleRequest.cs" />
-    <Compile Include="ScheduledJobs\ScheduleStatusMonitor.cs" />
+    <Compile Include="ScheduledJobs\Persistence\ScheduleStatusMonitor.cs" />
     <Compile Include="ScheduledJobs\ScheduledJob.cs" />
-    <Compile Include="ScheduledJobs\ScheduledJobExpression.cs" />
+    <Compile Include="ScheduledJobs\Configuration\ScheduledJobExpression.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobGraph.cs" />
-    <Compile Include="ScheduledJobs\ScheduledJobHandlerCall.cs" />
-    <Compile Include="ScheduledJobs\ScheduledJobHandlerSource.cs" />
-    <Compile Include="ScheduledJobs\ScheduledJobLogRecords.cs" />
-    <Compile Include="ScheduledJobs\ScheduledJobRoutingRule.cs" />
-    <Compile Include="ScheduledJobs\ScheduledJobRunner.cs" />
-    <Compile Include="ScheduledJobs\ScheduledJobServicesRegistry.cs" />
-    <Compile Include="ScheduledJobs\ScheduledJobController.cs" />
+    <Compile Include="ScheduledJobs\Configuration\ScheduledJobHandlerCall.cs" />
+    <Compile Include="ScheduledJobs\Configuration\ScheduledJobHandlerSource.cs" />
+    <Compile Include="ScheduledJobs\Execution\ScheduledJobLogRecords.cs" />
+    <Compile Include="ScheduledJobs\Configuration\ScheduledJobRoutingRule.cs" />
+    <Compile Include="ScheduledJobs\Execution\ScheduledJobRunner.cs" />
+    <Compile Include="ScheduledJobs\Configuration\ScheduledJobServicesRegistry.cs" />
+    <Compile Include="ScheduledJobs\Execution\ScheduledJobController.cs" />
     <Compile Include="Scheduling\IScheduler.cs" />
     <Compile Include="Scheduling\TaskScheduler.cs" />
     <Compile Include="Scheduling\ThreadScheduler.cs" />
