a lot of spiking for monitoring

--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -158,7 +158,9 @@
     <Compile Include="Logging\MessageLogRecord.cs" />
     <Compile Include="Logging\MessageSuccessful.cs" />
     <Compile Include="Logging\NoHandlerForMessage.cs" />
-    <Compile Include="NotHandlerAttribute.cs" />
+    <Compile Include="Monitoring\MonitoringClasses.cs" />
+    <Compile Include="Monitoring\MonitoringMessages.cs" />
+	<Compile Include="NotHandlerAttribute.cs" />
     <Compile Include="Polling\BuiltInPollingJobRegistry.cs" />
     <Compile Include="Polling\DefaultTimer.cs" />
     <Compile Include="Polling\IJob.cs" />
