changed the IServiceBus.Request signature for specifying destination, Memory persistence for task ownership

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -349,6 +349,8 @@
     <Compile Include="Logging\EventAggregationListenerTester.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Monitoring\MemoryTaskOwnershipPersistenceTester.cs" />
+    <Compile Include="Monitoring\RiggedServiceBus.cs" />
     <Compile Include="ObjectMother.cs">
       <SubType>Code</SubType>
     </Compile>
