--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -157,10 +157,13 @@
     <Compile Include="Logging\MessageFailed.cs" />
     <Compile Include="Logging\MessageLogRecord.cs" />
     <Compile Include="Logging\MessageSuccessful.cs" />
-    <Compile Include="Logging\NoHandlerForMessage.cs" />
     <Compile Include="Monitoring\MonitoringClasses.cs" />
     <Compile Include="Monitoring\MonitoringMessages.cs" />
+    <Compile Include="Monitoring\MemoryTaskOwnershipPersistence.cs" />
+	<Compile Include="Logging\NoHandlerForMessage.cs" />
 	<Compile Include="NotHandlerAttribute.cs" />
+    <Compile Include="Monitoring\TaskOwner.cs" />
+    <Compile Include="Monitoring\TransportPeer.cs" />
     <Compile Include="Polling\BuiltInPollingJobRegistry.cs" />
     <Compile Include="Polling\DefaultTimer.cs" />
     <Compile Include="Polling\IJob.cs" />
