--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -157,6 +157,8 @@
     <Compile Include="Logging\MessageFailed.cs" />
     <Compile Include="Logging\MessageLogRecord.cs" />
     <Compile Include="Logging\MessageSuccessful.cs" />
+    <Compile Include="Logging\NoHandlerForMessage.cs" />
+    <Compile Include="Monitoring\InMemoryTaskOwnershipPersistence.cs" />
     <Compile Include="Monitoring\MonitoringClasses.cs" />
     <Compile Include="Monitoring\MonitoringMessages.cs" />
     <Compile Include="Monitoring\MemoryTaskOwnershipPersistence.cs" />
