--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -158,9 +158,20 @@
     <Compile Include="Logging\MessageLogRecord.cs" />
     <Compile Include="Logging\MessageSuccessful.cs" />
     <Compile Include="Logging\NoHandlerForMessage.cs" />
-    <Compile Include="Monitoring\MonitoringClasses.cs" />
-    <Compile Include="Monitoring\MonitoringMessages.cs" />
+    <Compile Include="Monitoring\HealthStatus.cs" />
+    <Compile Include="Monitoring\IPersistentTask.cs" />
+    <Compile Include="Monitoring\IPersistentTaskSource.cs" />
+    <Compile Include="Monitoring\ITransportPeer.cs" />
+    <Compile Include="Monitoring\ITransportPeerRepository.cs" />
+    <Compile Include="Monitoring\PersistentTaskController.cs" />
+    <Compile Include="Monitoring\PersistentTaskAgent.cs" />
+    <Compile Include="Monitoring\TaskHealthRequest.cs" />
+    <Compile Include="Monitoring\OwnershipStatus.cs" />
+    <Compile Include="Monitoring\TakeOwnershipRequest.cs" />
+    <Compile Include="Monitoring\TakeOwnershipResponse.cs" />
+    <Compile Include="Monitoring\TaskHealthResponse.cs" />
     <Compile Include="Monitoring\TaskOwner.cs" />
+    <Compile Include="Monitoring\TaskStatus.cs" />
     <Compile Include="Monitoring\TransportPeer.cs" />
     <Compile Include="Monitoring\TransportPeerRepository.cs" />
     <Compile Include="Polling\BuiltInPollingJobRegistry.cs" />
