--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -350,6 +350,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Monitoring\FakePersistentTasks.cs" />
+    <Compile Include="Monitoring\PermanentTaskController\TakeOwnership_specs.cs" />
     <Compile Include="Monitoring\PermanentTaskController\when_activating_all_tasks.cs" />
     <Compile Include="Monitoring\PermanentTaskController\when_checking_status.cs" />
     <Compile Include="Monitoring\PermanentTaskController\when_finding_a_task.cs" />
