--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -354,6 +354,7 @@
     <Compile Include="Monitoring\PermanentTaskController\when_activating_all_tasks.cs" />
     <Compile Include="Monitoring\PermanentTaskController\when_checking_status.cs" />
     <Compile Include="Monitoring\PermanentTaskController\when_finding_a_task.cs" />
+    <Compile Include="Monitoring\PermanentTaskController\when_stopping_a_task.cs" />
     <Compile Include="Monitoring\PersistentTaskAgentTester.cs" />
     <Compile Include="Monitoring\PermanentTaskController\PersistentTaskControllerContext.cs" />
     <Compile Include="Monitoring\RiggedServiceBus.cs" />
