--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -158,9 +158,11 @@
     <Compile Include="Logging\MessageLogRecord.cs" />
     <Compile Include="Logging\MessageSuccessful.cs" />
     <Compile Include="Logging\NoHandlerForMessage.cs" />
+    <Compile Include="Monitoring\HealthAndAssignmentRouter.cs" />
     <Compile Include="Monitoring\HealthStatus.cs" />
     <Compile Include="Monitoring\IPersistentTask.cs" />
     <Compile Include="Monitoring\IPersistentTaskSource.cs" />
+    <Compile Include="Monitoring\ITaskRouter.cs" />
     <Compile Include="Monitoring\ITransportPeer.cs" />
     <Compile Include="Monitoring\ITransportPeerRepository.cs" />
     <Compile Include="Monitoring\LogMessages.cs" />
