--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -355,6 +355,7 @@
     <Compile Include="Monitoring\PermanentTaskController\TakeOwnership_specs.cs" />
     <Compile Include="Monitoring\PermanentTaskController\when_activating_all_tasks.cs" />
     <Compile Include="Monitoring\PermanentTaskController\when_checking_status.cs" />
+    <Compile Include="Monitoring\PermanentTaskController\when_checking_the_status_of_owned_tasks.cs" />
     <Compile Include="Monitoring\PermanentTaskController\when_finding_a_task.cs" />
     <Compile Include="Monitoring\PermanentTaskController\when_stopping_a_task.cs" />
     <Compile Include="Monitoring\PersistentTaskAgentTester.cs" />
