--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Monitoring\ITransportPeer.cs" />
     <Compile Include="Monitoring\ITransportPeerRepository.cs" />
     <Compile Include="Monitoring\LogMessages.cs" />
+    <Compile Include="Monitoring\MonitoringControlHandler.cs" />
     <Compile Include="Monitoring\PersistentTaskController.cs" />
     <Compile Include="Monitoring\PersistentTaskAgent.cs" />
     <Compile Include="Monitoring\TaskHealthRequest.cs" />
