added the polling job for health monitoring

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -347,6 +347,7 @@
     <Compile Include="Monitoring\Monitoring_handlers_are_registered.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Monitoring\Monitoring_health_polling_job_is_registered.cs" />
     <Compile Include="Monitoring\PermanentTaskController\CurrentlyOwnedSubjectsTester.cs">
       <SubType>Code</SubType>
     </Compile>
