--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -608,6 +608,7 @@
     <Compile Include="ScheduledJobs\ScheduledJobIntegrationTester.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ScheduledJobs\ScheduledJobPersistentTaskTester.cs" />
     <Compile Include="ScheduledJobs\ScheduledJobRunnerTester.cs">
       <SubType>Code</SubType>
     </Compile>
