--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -168,8 +168,10 @@
     <Compile Include="Monitoring\ITransportPeerRepository.cs" />
     <Compile Include="Monitoring\LogMessages.cs" />
     <Compile Include="Monitoring\MonitoringControlHandler.cs" />
+    <Compile Include="Monitoring\OrderedAssignment.cs" />
     <Compile Include="Monitoring\PersistentTaskController.cs" />
     <Compile Include="Monitoring\PersistentTaskAgent.cs" />
+    <Compile Include="Monitoring\PersistentTaskMessageModifier.cs" />
     <Compile Include="Monitoring\TaskDeactivation.cs" />
     <Compile Include="Monitoring\TaskHealthRequest.cs" />
     <Compile Include="Monitoring\OwnershipStatus.cs" />
