--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Configuration\HandlerChainPolicy.cs" />
     <Compile Include="Configuration\HandlerGraph.cs" />
     <Compile Include="Configuration\HandlerPolicies.cs" />
+    <Compile Include="Configuration\HealthMonitoringExpression.cs" />
     <Compile Include="Configuration\IFubuTransportRegistryExtension.cs" />
     <Compile Include="Configuration\ISettingsAware.cs" />
     <Compile Include="Configuration\PoliciesExpression.cs" />
